# ARCoreJNI

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kt/sample/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/kt/sampler/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kt/sample/: ARCoreActivity.java  ARSurfaceView.java
app/src/main/java/com/kt/sample/utils/: CameraPermissionHelper.java  DepthSettings.java  InstantPlacementSettings.java
app/src/main/java/com/kt/sampler/: ARCoreActivity.java  ARSurfaceView.java
app/src/main/java/com/kt/sampler/utils/: CameraPermissionHelper.java  DepthSettings.java  InstantPlacementSettings.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kt/sample/: ExampleUnitTest.java
app/src/test/java/com/kt/sampler/: ExampleUnitTest.java
helloAR/: build.gradle
helloAR/src/androidTest/java/com/kt/helloAR/: ExampleInstrumentedTest.java
helloAR/src/main/: AndroidManifest.xml
helloAR/src/main/java/com/kt/helloAR/: JniInterface.java
helloAR/src/main/jni/: CMakeLists.txt  native-lib.cpp  native-lib.h
helloAR/src/main/jni/helloAR/: augmented_face_renderer.cc  augmented_face_renderer.h  augmented_image_renderer.cc  augmented_image_renderer.h  background_renderer.h  face_obj_renderer.cc  face_obj_renderer.h  hello_ar_application.cc  hello_ar_application.h  obj_renderer.h  plane_renderer.h  point_cloud_renderer.h  util.cc  util.h
helloAR/src/test/java/com/kt/helloAR/: ExampleUnitTest.java
